Web push notifications added

--- a/views/pages/admin-pushnotifications.ejs
+++ b/views/pages/admin-pushnotifications.ejs
@@ -23,7 +23,7 @@
             <br/>
             <div class="card">
                 <div class="card-header">
-                    Send Push Notifications
+                    Send Push Notifications to <b><%= count %></b> endpoints
                 </div>
                 <div class="card-body">
                     <% if (!response) { %>
@@ -49,7 +49,7 @@
                         <div class="form-group">
                             <label for="formGroupExampleInput2">Url</label>
                             <input type="text" name="url" class="form-control" id="formGroupExampleInput2"
-                                   placeholder="e.g. http://codeshala.org" value="http://codeshala.org" required>
+                                   placeholder="e.g. http://codeshala.org" value="https://codeshala.org" required>
                         </div>
 
                         <input type="submit" class="btn btn-primary" value="Send Push">
