--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,8 +1,3 @@
-* {
-    -webkit-tap-highlight-color: transparent;
-    -webkit-font-smoothing: antialiased;
-}
-
 body {
     background-color: #f3f3f3;
     font-family: Gotham SSm A, Gotham SSm B, Helvetica, sans-serif;
@@ -21,8 +16,8 @@ nav {
 }
 
 .container {
-    margin-top: 50px;
     margin-bottom: 60px;
+    margin-top: 50px;
 }
 
 .codeshala-theme {
@@ -30,8 +25,8 @@ nav {
 }
 
 .codeshala-logo {
-    width: 200px;
     height: 40px;
+    width: 200px;
 }
 
 .codeshala-heading {
@@ -40,7 +35,7 @@ nav {
 }
 
 .codeshala-banner {
-/ / background-image: url('/assets/images/banners/background.png');
+    background-image: url('/assets/images/banners/background.png');
 }
 
 .codeshala-heading > h1 {
@@ -49,9 +44,9 @@ nav {
 }
 
 .codeshala-course-heading > h1 {
-    margin-top: 50px;
     font-size: 2vw;
     font-weight: 700;
+    margin-top: 50px;
 }
 
 .codeshala-heading > h2 {
