Codeshala leaderboard https://github.com/CodeShala/codeshala.org/issues/29

--- a/views/partials/admin-menu.ejs
+++ b/views/partials/admin-menu.ejs
@@ -29,6 +29,9 @@
     <a href="/admin/courses">
         <li class="list-group-item">Courses</li>
     </a>
+    <a href="/admin/hackerearth">
+        <li class="list-group-item">Add HE Test <span class="blink">[New]</span></li>
+    </a>
     <a href="/admin/venue/add">
         <li class="list-group-item">Institute branches</li>
     </a>
