--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -54,6 +54,30 @@
         <!-- Insert new course above this line-->
     </div>
 </div>
+<div class="container text-center mx-auto" id="clients">
+    <h3 class=" text-dark text-center font-weight-bold">
+        Our Clients
+    </h3>
+    <div class="row mx-auto" style="position:relative">
+        <div class="card col-lg-3 codeshala-projects-card">
+            <a href="http://ymcaust.ac.in/" target="_blank">
+                <div class="codeshala-projects-thumbnail"
+                     style="background-image:url(/assets/images/clients/ymca.png);background-size: contain;background-repeat: no-repeat;"></div>
+                <h2 class="codeshala-projects-title">YMCA University Of Science &amp; Technology, Faridabad</h2>
+                <span class="text-center codeshala-theme codeshala-course-card-btn">Website</span>
+            </a>
+        </div>
+        <div class="card col-lg-3 codeshala-projects-card">
+            <a href="http://www.apeejay.edu" target="_blank">
+                <div class="codeshala-projects-thumbnail"
+                     style="background-image:url(/assets/images/clients/apeejay_education_society.jpg);background-size: contain;background-repeat: no-repeat;"></div>
+                <h2 class="codeshala-projects-title">Apeejay Education Society<br/></h2>
+                <span class="text-center codeshala-theme codeshala-course-card-btn">Website</span>
+            </a>
+        </div>
+
+    </div>
+</div>
 <div class="container text-center" id="stats">
     <h3 class=" text-dark text-center font-weight-bold">
         Stats that make us proud
@@ -141,7 +165,7 @@
                 <img src="assets/images/samsung.png" alt="Samsung" class="img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                 <img src="assets/images/paytm.png" alt="PayTM" class="img-fluid codeshala-company-image">
+                <img src="assets/images/paytm.png" alt="PayTM" class="img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
                 <img src="assets/images/mediatek.png" alt="Mediatek" class="img-fluid codeshala-company-image">
