Codeshala For Kids Teaser ( https://github.com/CodeShala/codeshala.org/issues/32 )

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -25,6 +25,18 @@
 <hr>
 <div class="container text-center" id="courses-section">
     <div class="row mx-auto">
+        <div class="card col-lg-3 codeshala-course-card">
+            <div class="codeshala-course-thumbnail"
+                 style="background-image:url(https://i.pinimg.com/originals/82/43/cc/8243ccc3bf3e4df8db3bfd3a494a5895.jpg);background-size:cover;background-repeat: no-repeat;"></div>
+            <h2><a href="">Codeshala For Kids</a></h2>
+            <h2>Coming Soon<br/>
+
+            </h2><br/><br/>
+            <p>3 - 4 Weeks<br/>
+            We believe anybody can CODE. To diversify our courses, We are execited to inspire the young generation and make them know how to code. </p>
+            <span class="text-center codeshala-theme codeshala-course-card-btn"><a
+                        href="">Unveiling soon</a></span>
+        </div>
         <% for(key in courses){ %>
         <div class="card col-lg-3 codeshala-course-card">
 
