--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
 <% include ../partials/nav %>
-<div class="container text-center codeshala-heading">
+<div class="container text-center codeshala-heading" id="about-section">
     <h1><span style="color:#fd8900">CODE</span><span style="color:#0289fe">SHALA</span><br/>GET BETTER AT PROGRAMING
     </h1>
     <h2 class="d-none d-lg-block d-xl-block">
