--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,31 +7,34 @@
                         <h3 class="footer-links-title">COMPANY</h3>
                         <ul class="footer-links">
                             <li>
-                                <a href="/#about">About</a>
+                                <a href="/#about-section">About</a>
                             </li>
-                            <li>
-                                <a href="/#mentors">Mentors</a>
-                            </li>
+                            <!--<li>-->
+                            <!--<a href="/#mentors">Mentors</a>-->
+                            <!--</li>-->
                             <li>
                                 <a href="/#projects">Projects</a>
                             </li>
                             <!--<li>
                                 <a href="#">Events</a>
                             </li>-->
-                            <li>
-                                <a href="/#footer">Contact Us</a>
-                            </li>
+                            <!--<li>-->
+                            <!--<a href="/#footer">Contact Us</a>-->
+                            <!--</li>-->
                             <li>
                                 <a href="/privacy">Privacy Policy</a>
                             </li>
                             <li>
-                                <a href="https://github.com/CodeShala" target="new">Github</a>
+                                <a href="https://github.com/CodeShala" target="_blank">Github</a>
                             </li>
                         </ul>
                     </div>
                     <div class="col-lg-4 text-left">
                         <h3 class="footer-links-title">COURSES</h3>
                         <ul class="footer-links">
+                            <li>
+                                <a href="">Codeshala For Kids</a>
+                            </li>
                             <li>
                                 <a href="/course/full-stack-web-development-using-node-js">Full stack web development
                                     using Node.Js</a>
@@ -55,7 +58,7 @@
                         <h3 class="footer-links-title">RESOURCES</h3>
                         <ul class="footer-links">
                             <li>
-                                <a href="#/assignments">Coding Assignments</a>
+                                <a href="/assignments">Coding Assignments</a>
                             </li>
                             <li>
                                 <a href="/contests">Coding Contests</a>
@@ -84,7 +87,7 @@
                                 <a href="https://www.facebook.com/CodeshalaOrg/posts">Facebook Group</a>
                             </li>
                             <li>
-                                <a href="#">Telegram Group</a>
+                                <a href="https://t.me/joinchat/DcctBhG8A1pP4y1O11gK6w">Telegram Group</a>
                             </li>
                         </ul>
                     </div>
@@ -94,7 +97,20 @@
             <div class="col-lg-3">
                 <img class="codeshala-logo" src="/assets/images/site_logo.png"><br/>
                 GET BETTER AT PROGRAMING<br/><br/>
-                &copy; HoneyByte 2018<br/>
+                <a style="color:#7f7f7f" target="_blank" href="https://www.google.com/maps/place/Codeshala/@28.3698531,77.2460717,12z/data=!4m18!1m12!4m11!1m3!2m2!1d77.3161096!2d28.3709104!1m6!1m2!1s0x390cdc6e13b539df:0xc2be37a367c3715c!2scodeshala!2m2!1d77.316112!2d28.369871!3m4!1s0x390cdc6e13b539df:0xc2be37a367c3715c!8m2!3d28.369871!4d77.316112">
+                    Address: 37, Sector 11D, Pocket E, Sector 11, Faridabad, Haryana 121006
+                </a>
+                <a href="mailto:contact@codeshala.org" style="color:#7f7f7f">
+                    contact@codeshala.org
+                </a>
+                <br/>
+                <a href="tel:+919582574901" style="color:#7f7f7f">
+                    +919582574901
+                </a>
+                <br/>
+                <br/>
+                &copy; HoneyByte 2018
+                <br/>
                 <a href="/privacy" style="color:#7f7f7f;">T&C</a> | <a href="/privacy" style="color:#7f7f7f;">Privacy
                     policy</a>
             </div>
@@ -103,6 +119,9 @@
         <p class="text-left">We are community of programmers. Our community is lead by professionals who have broad
             experience in competitve programming and software development. Our community mentors are working at top
             companies and providing mentorship to candidates across different colleges. We provide learning courses to
-            make you a better programmer.</p>
+            make you a better programmer.We at CodeShala are trying to encourage people to be a problem solver. Problem
+            solving is fun because you can see how problem solving skills helps to solve critical problems during
+            software development and cracking tech interviews. Our mission is to teach students how they can apply
+            algorithms and data-structures to solve real life problems.</p>
     </div>
 </footer>
