--- a/views/partials/metadata.ejs
+++ b/views/partials/metadata.ejs
@@ -40,3 +40,6 @@
 <meta name="msapplication-TileColor" content="#f3f3f3">
 <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#a1a1a2">
+
+<!-- For google site verification -->
+<meta name="google-site-verification" content="rmvU-llgx4xg3IdbE1oRWS54nTxNxzHBnMzFqqUSovA" />
