--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
             <div class="col-lg-8" style="valign:top;">
                 <div class="row">
                     <div class="col-lg-2 text-left">
-                        <h3 class="footer-links-title">COMPANY</h3>
+                        <h3 class="footer-links-title">ABOUT COMPANY</h3>
                         <ul class="footer-links">
                             <li>
                                 <a href="/#about-section">About</a>
@@ -30,7 +30,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-4 text-left">
-                        <h3 class="footer-links-title">COURSES</h3>
+                        <h3 class="footer-links-title">OUR COURSES</h3>
                         <ul class="footer-links">
                             <li>
                                 <a href="">Codeshala For Kids</a>
