--- a/views/partials/metadata.ejs
+++ b/views/partials/metadata.ejs
@@ -1,26 +1,26 @@
 <!--Meta Data-->
 <!-- for Google -->
 <meta name="description"
-      content="We are community of programmers. Our community is lead by professionals who have broad experience in competitve programming and software development. Our community mentors are working at top companies and providing mentorship to candidates across different colleges."/>
-<meta name="keywords" content="codeshala"/>
+      content="CODESHALA a community of professional and experienced programmers and software developers providing algorithms data structures and many more other course"/>
+<meta name="keywords" content="codeshala,code shala,COURSE,ALGORITHMS,DATA, STRUCTURES"/>
 <meta name="author" content="Codeshala.Org"/>
 <meta name="copyright" content="contact@codeshala.org"/>
 <meta name="application-name" content="Codeshala"/>
 <!-- for Facebook -->
-<meta property="og:url" content="http://codeshala.org"/>
+<meta property="og:url" content="https://codeshala.org"/>
 <meta property="og:type" content="article"/>
 <meta property="og:title"
-      content="Codeshala | Get Better At Programing By Joining The Best programing courses in Delhi NCR"/>
+      content="Codeshala - Join The Best programing courses"/>
 <meta property="og:description"
-      content="We are community of programmers. Our community is lead by professionals who have broad experience in competitve programming and software development. Our community mentors are working at top companies and providing mentorship to candidates across different colleges."/>
-<meta property="og:site_name" content="Codeshala | GET BETTER AT PRORGAMMING"/>
+      content="CODESHALA a community of professional and experienced programmers and software developers providing algorithms data structures and many more other course"/>
+<meta property="og:site_name" content="Codeshala - Join The Best programing courses"/>
 <meta property="og:image" content="https://s3-eu-west-1.amazonaws.com/codeshala.org/assets/cover-image.jpg"/>
 <!-- for Twitter -->
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title"
-      content="Codeshala | Get Better At Programing By Joining The Best programing courses in Delhi NCR"/>
+      content="Codeshala - Join The Best programing courses"/>
 <meta name="twitter:description"
-      content="e are community of programmers. Our community is lead by professionals who have broad experience in competitve programming and software development. Our community mentors are working at top companies and providing mentorship to candidates across different colleges."/>
+      content="CODESHALA a community of professional and experienced programmers and software developers providing algorithms data structures and many more other course"/>
 <meta name="twitter:image" content="https://s3-eu-west-1.amazonaws.com/codeshala.org/assets/cover-image.jpg"/>
 <!-- Favicon and app icon settings -->
 <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
@@ -42,4 +42,8 @@
 <meta name="theme-color" content="#a1a1a2">
 
 <!-- For google site verification -->
-<meta name="google-site-verification" content="rmvU-llgx4xg3IdbE1oRWS54nTxNxzHBnMzFqqUSovA" />
+<meta name="google-site-verification" content="rmvU-llgx4xg3IdbE1oRWS54nTxNxzHBnMzFqqUSovA"/>
+<!-- Structured data markup-->
+<script type="application/ld+json">
+{ "@context" : "http://schema.org", "@type" : "LocalBusiness", "name" : "CODESHALA", "image" : "https://codeshala.org/assets/images/site_logo.png", "telephone" : "+919582574901", "email" : "contact@codeshala.org", "address" : { "@type" : "PostalAddress", "streetAddress" : "37, Sector 11D, Pocket E,", "addressLocality" : "Sector 11, Faridabad", "addressRegion" : "Haryana", "addressCountry" : "India", "postalCode" : "121006" }, "url" : "https://codeshala.org/", "aggregateRating" : { "@type" : "AggregateRating", "ratingValue" : "5", "bestRating" : "5", "worstRating" : "5", "ratingCount" : "200" }, "review" : { "@type" : "Review", "author" : { "@type" : "Person", "name" : "Samiksha Bansal" }, "reviewRating" : { "@type" : "Rating", "ratingValue" : "5" }, "reviewBody" : "Intern at Amazon. It was a fruitful learning experience. There was always an enthusiastic environment that made coding a lot more fun ! Classes were always interactive. Assignments, INS , Contests everything was great. It has really improved my programming skills. I am very satisfied and feel happy that I have inculcated the zest for coding." } }
+</script>
