--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="/">
-        <img class="codeshala-logo" src="/assets/images/site_logo.png">
+        <img class="codeshala-logo" src="/assets/images/site_logo.png" alt="codeshala logo">
     </a>
     <button class="navbar-toggler bg-dark navbar-dark" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
