Web push notifications added

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
             <div class="col-lg-8" style="valign:top;">
                 <div class="row">
                     <div class="col-lg-2 text-left">
-                        <h3 class="footer-links-title">ABOUT COMPANY</h3>
+                        <h3 class="footer-links-title">ABOUT CODESHALA</h3>
                         <ul class="footer-links">
                             <li>
                                 <a href="/#about-section">About</a>
@@ -30,7 +30,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-4 text-left">
-                        <h3 class="footer-links-title">OUR COURSES</h3>
+                        <h3 class="footer-links-title">OUR OPEN COURSES</h3>
                         <ul class="footer-links">
                             <li>
                                 <a href="">Codeshala For Kids</a>
@@ -55,7 +55,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-3 text-left">
-                        <h3 class="footer-links-title">RESOURCES</h3>
+                        <h3 class="footer-links-title">STUDENTS RESOURCES</h3>
                         <ul class="footer-links">
                             <li>
                                 <a href="/assignments">Coding Assignments</a>
@@ -78,7 +78,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-3 text-left">
-                        <h3 class="footer-links-title">SOCIAL</h3>
+                        <h3 class="footer-links-title">CODESHALA IS SOCIAL</h3>
                         <ul class="footer-links">
                             <li>
                                 <a href="https://www.facebook.com/CodeshalaOrg">Facebook Page</a>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="col-lg-3">
-                <img class="codeshala-logo" src="/assets/images/site_logo.png"><br/>
+                <img class="codeshala-logo" src="/assets/images/site_logo.png" alt="codeshala logo"><br/>
                 GET BETTER AT PROGRAMING<br/><br/>
                 <a style="color:#7f7f7f" target="_blank" href="https://www.google.com/maps/place/Codeshala/@28.3698531,77.2460717,12z/data=!4m18!1m12!4m11!1m3!2m2!1d77.3161096!2d28.3709104!1m6!1m2!1s0x390cdc6e13b539df:0xc2be37a367c3715c!2scodeshala!2m2!1d77.316112!2d28.369871!3m4!1s0x390cdc6e13b539df:0xc2be37a367c3715c!8m2!3d28.369871!4d77.316112">
                     Address: 37, Sector 11D, Pocket E, Sector 11, Faridabad, Haryana 121006
