--- a/views/partials/metadata.ejs
+++ b/views/partials/metadata.ejs
@@ -36,7 +36,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-<link rel="manifest" href="/assets/favicon/manifest.json">
+<link rel="manifest" href="/manifest.json">
 <meta name="msapplication-TileColor" content="#f3f3f3">
 <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#a1a1a2">
