--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,7 +16,7 @@
         mentorship to candidates across different colleges. We provide learning courses to make you a better programmer.
     </p>
     <span class="text-center codeshala-theme codeshala-course-card-btn">
-		<span id="btnCourseChooser" style="display: block;" >
+		<span id="btnCourseChooser" style="display: block;">
         <a href="/tools/course-chooser" data-toggle="modal" data-target="#CourseChooserModal">
 				<small>Not able to decide which course to join?</small>
 				<br/>Try our course chooser
@@ -79,7 +79,7 @@
     </h3>
     <div class="row mx-auto" style="position:relative">
         <div class="card col-lg-3 codeshala-projects-card">
-            <a href="http://ymcaust.ac.in/" target="_blank">
+            <a href="http://ymcaust.ac.in/" target="_blank" rel="noopener">
                 <div class="codeshala-projects-thumbnail"
                      style="background-image:url(/assets/images/clients/ymca.png);background-size: contain;background-repeat: no-repeat;"></div>
                 <h2 class="codeshala-projects-title">YMCA University Of Science &amp; Technology, Faridabad</h2>
@@ -87,7 +87,7 @@
             </a>
         </div>
         <div class="card col-lg-3 codeshala-projects-card">
-            <a href="http://www.apeejay.edu" target="_blank">
+            <a href="http://www.apeejay.edu" target="_blank" rel="noopener">
                 <div class="codeshala-projects-thumbnail"
                      style="background-image:url(/assets/images/clients/apeejay_education_society.jpg);background-size: contain;background-repeat: no-repeat;"></div>
                 <h2 class="codeshala-projects-title">Apeejay Education Society<br/></h2>
@@ -151,7 +151,7 @@
         <div class="card col-lg-12 codeshala-feedbacks-card">
             <div class="row">
                 <div class="col-lg-2">
-                    <img src="/assets/images/feedbacks/sample.jpg" alt="feedback-thumbnail" height="150px"
+                    <img src="/assets/favicon/favicon-96x96.png" data-src="/assets/images/feedbacks/sample.jpg" class="lazy" alt="feedback-thumbnail" height="150px"
                          width="150px">
                 </div>
                 <div class="col-lg-10">
@@ -179,55 +179,72 @@
         </h3>
         <div class="row mx-auto">
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/amazon.png" alt="Amazon" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/amazon.png" alt="Amazon"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/samsung.png" alt="Samsung" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/samsung.png" alt="Samsung"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/paytm.png" alt="PayTM" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/paytm.png" alt="PayTM"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/mediatek.png" alt="Mediatek" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/mediatek.png" alt="Mediatek"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/sprinklr.png" alt="Sprinklr" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/sprinklr.png" alt="Sprinklr"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/adobe.png" alt="Adobe" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/adobe.png" alt="Adobe"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/opera.png" alt="Opera" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/opera.png" alt="Opera"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/sapient.png" alt="Sapient" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/sapient.png" alt="Sapient"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/squadrun.png" alt="Squadrun" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/squadrun.png" alt="Squadrun"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/smartprix.png" alt="Smartprix" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/smartprix.png" alt="Smartprix"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/st.png" alt="ST" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/st.png" alt="ST"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/magicpin.png" alt="MagicPin" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/magicpin.png" alt="MagicPin"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/tcs.png" alt="TCS" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/tcs.png" alt="TCS"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/daffodil.png" alt="Daffodil" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/daffodil.png" alt="Daffodil"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/capegemini.png" alt="Capegemini" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/capegemini.png" alt="Capegemini"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <div class="col-lg-3 mx-auto">
-                <img src="assets/images/libsys.png" alt="Libsys" class="img-fluid codeshala-company-image">
+                <img src="/load.gif" data-src="/assets/images/libsys.png" alt="Libsys"
+                     class="lazy img-fluid codeshala-company-image">
             </div>
             <!--Add new logos above this line-->
         </div>
+
     </div>
 </div>
 <% include ../partials/footer %>
@@ -237,4 +254,63 @@
 
 <% include ../partials/footer-scripts %>
 <script src="/client.js"></script>
+<script>
+    var lazy = [];
+    function setLazy(){
+        lazy = document.getElementsByClassName('lazy');
+    }
+
+    function lazyLoad(){
+        for(var i=0; i<lazy.length; i++){
+            if(isInViewport(lazy[i])){
+                if (lazy[i].getAttribute('data-src')){
+                    lazy[i].src =
+                        lazy[i].getAttribute('data-src');
+
+                    // remove the attribute
+                    lazy[i].removeAttribute('data-src');
+                }
+            }
+        }
+
+        cleanLazy();
+    }
+
+    function cleanLazy(){
+        lazy =
+            Array.prototype.filter.call(
+                lazy,
+                function(l){
+                    return l.getAttribute('data-src');
+                }
+            );
+    }
+
+    function registerListener(event, func) {
+        if (window.addEventListener) {
+            window.addEventListener(event, func)
+        } else {
+            window.attachEvent('on' + event, func)
+        }
+    }
+    function isInViewport(el){
+        var rect = el.getBoundingClientRect();
+
+        return (
+            rect.bottom >= 0 &&
+            rect.right >= 0 &&
+
+            rect.top <= (
+                window.innerHeight ||
+                document.documentElement.clientHeight) &&
+
+            rect.left <= (
+                window.innerWidth ||
+                document.documentElement.clientWidth)
+        );
+    }
+    registerListener('load', lazyLoad);
+    registerListener('load', setLazy);
+    registerListener('scroll', lazyLoad);
+</script>
 </html>
