--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -25,7 +25,7 @@
                                 <a href="/privacy">Privacy Policy</a>
                             </li>
                             <li>
-                                <a href="https://github.com/CodeShala" target="_blank">Github</a>
+                                <a href="https://github.com/CodeShala" target="_blank" rel="noopener">Github</a>
                             </li>
                         </ul>
                     </div>
@@ -97,7 +97,7 @@
             <div class="col-lg-3">
                 <img class="codeshala-logo" src="/assets/images/site_logo.png" alt="codeshala logo"><br/>
                 GET BETTER AT PROGRAMING<br/><br/>
-                <a style="color:#7f7f7f" target="_blank" href="https://www.google.com/maps/place/Codeshala/@28.3698531,77.2460717,12z/data=!4m18!1m12!4m11!1m3!2m2!1d77.3161096!2d28.3709104!1m6!1m2!1s0x390cdc6e13b539df:0xc2be37a367c3715c!2scodeshala!2m2!1d77.316112!2d28.369871!3m4!1s0x390cdc6e13b539df:0xc2be37a367c3715c!8m2!3d28.369871!4d77.316112">
+                <a style="color:#7f7f7f" target="_blank" rel="noopener" href="https://www.google.com/maps/place/Codeshala/@28.3698531,77.2460717,12z/data=!4m18!1m12!4m11!1m3!2m2!1d77.3161096!2d28.3709104!1m6!1m2!1s0x390cdc6e13b539df:0xc2be37a367c3715c!2scodeshala!2m2!1d77.316112!2d28.369871!3m4!1s0x390cdc6e13b539df:0xc2be37a367c3715c!8m2!3d28.369871!4d77.316112">
                     Address: 37, Sector 11D, Pocket E, Sector 11, Faridabad, Haryana 121006
                 </a>
                 <a href="mailto:contact@codeshala.org" style="color:#7f7f7f">
