Add client info : Aadyant School

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -95,6 +95,14 @@
             </a>
         </div>
 
+        <div class="card col-lg-3 codeshala-projects-card">
+            <a href="http://www.aadyant.com" target="_blank" rel="noopener">
+                <div class="codeshala-projects-thumbnail"
+                    style="background-image:url(/assets/images/clients/aadyant_school.png);background-size: contain;background-repeat: no-repeat;"></div>
+                    <h2 class="codeshala-projects-title">Aadyant School<br/></h2>
+                    <span class="text-center codeshala-theme codeshala-course-card-btn">Website</span>
+            </a>
+        </div>
     </div>
 </div>
 <div class="container text-center" id="stats">
