Roll back of service worker offline code

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -15,7 +15,7 @@
         </h1>
         <br/>
 
-        <form action="/login" method="post">
+        <form method="POST" action="/login">
             <div>
                 <label>Username:</label>
                 <input type="text" name="username"/><br/>
