--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -155,7 +155,7 @@
             <div class="row" id="step1">
                 <div class="col-lg-6 codeshala-course-registration-border" style="margin-top:20px"><b>Register/Sign
                         In:</b><br/>
-                    <form method="post" action="/course/register">
+                    <form method="post" action="/courseRegister">
                         <div class="form-group">
                             <label>Enter Your Mobile Number</label>
                             <input value="+91" id="country_code" hidden/>
