Implementing Blog Ref: https://github.com/CodeShala/codeshala.org/issues/43

--- a/views/partials/admin-menu.ejs
+++ b/views/partials/admin-menu.ejs
@@ -23,14 +23,17 @@
     <a href="/admin">
         <li class="list-group-item">Home</li>
     </a>
+    <a href="/createNewBlog">
+        <li class="list-group-item">New Blog <span class="blink">[New]</span></li>
+    </a>
     <a href="/admin/push">
-        <li class="list-group-item">Push Notifications <span class="blink">[New]</span></li>
+        <li class="list-group-item">Push Notifications</li>
     </a>
     <a href="/admin/courses">
         <li class="list-group-item">Courses</li>
     </a>
     <a href="/admin/hackerearth">
-        <li class="list-group-item">Add HE Test <span class="blink">[New]</span></li>
+        <li class="list-group-item">Add HE Test</li>
     </a>
     <a href="/admin/venue/add">
         <li class="list-group-item">Institute branches</li>
