--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,6 +9,9 @@
                             <li>
                                 <a href="/#about-section">About</a>
                             </li>
+                            <li>
+                                <a href="/blog">Blog</a>
+                            </li>
                             <!--<li>-->
                             <!--<a href="/#mentors">Mentors</a>-->
                             <!--</li>-->
