--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -100,15 +100,16 @@
             <div class="col-lg-3">
                 <img class="codeshala-logo" src="/assets/images/site_logo.png" alt="codeshala logo"><br/>
                 GET BETTER AT PROGRAMING<br/><br/>
-                <a style="color:#7f7f7f" target="_blank" rel="noopener" href="https://www.google.com/maps/place/Codeshala/@28.3698531,77.2460717,12z/data=!4m18!1m12!4m11!1m3!2m2!1d77.3161096!2d28.3709104!1m6!1m2!1s0x390cdc6e13b539df:0xc2be37a367c3715c!2scodeshala!2m2!1d77.316112!2d28.369871!3m4!1s0x390cdc6e13b539df:0xc2be37a367c3715c!8m2!3d28.369871!4d77.316112">
-                    Address: 37, Sector 11D, Pocket E, Sector 11, Faridabad, Haryana 121006
-                </a>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d112339.01924525795!2d77.25956522866998!3d28.371111200971352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x390cdc6f702bacb1%3A0xee56acae62375e1b!2sCODESHALA!3m2!1d28.371129099999997!2d77.3296055!5e0!3m2!1sen!2sin!4v1528103849237" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <div class="address-text" style="color:#7f7f7f">
+                    Address: 2nd floor,Plot - 178, Sector - 10, Sector 9/10 Dividing Road. Nearby lenskart showroom.
+                </div>
                 <a href="mailto:contact@codeshala.org" style="color:#7f7f7f">
-                    contact@codeshala.org
+                    E: contact@codeshala.org
                 </a>
                 <br/>
                 <a href="tel:+919582574901" style="color:#7f7f7f">
-                    +919582574901
+                    M: +919582574901
                 </a>
                 <br/>
                 <br/>
