Adjust google map in footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -100,9 +100,9 @@
             <div class="col-lg-3">
                 <img class="codeshala-logo" src="/assets/images/site_logo.png" alt="codeshala logo"><br/>
                 GET BETTER AT PROGRAMING<br/><br/>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d112339.01924525795!2d77.25956522866998!3d28.371111200971352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x390cdc6f702bacb1%3A0xee56acae62375e1b!2sCODESHALA!3m2!1d28.371129099999997!2d77.3296055!5e0!3m2!1sen!2sin!4v1528103849237" width="600" height="450" frameborder="0" style="border:0" style="height: 250px;width: 350px;" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d112339.01924525795!2d77.25956522866998!3d28.371111200971352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x390cdc6f702bacb1%3A0xee56acae62375e1b!2sCODESHALA!3m2!1d28.371129099999997!2d77.3296055!5e0!3m2!1sen!2sin!4v1528103849237" width="350" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
                 <div class="address-text" style="color:#7f7f7f">
-                    Address: 2nd floor,Plot - 178, Sector - 10, Sector 9/10 Dividing Road. Nearby lenskart showroom.
+                    Address: 2nd floor,Plot - 178, Sector - 10, Sector 9/10 Dividing Road, Faridabad(121004).
                 </div>
                 <a href="mailto:contact@codeshala.org" style="color:#7f7f7f">
                     E: contact@codeshala.org
