--- a/views/blog/pages/blog.ejs
+++ b/views/blog/pages/blog.ejs
@@ -4,64 +4,6 @@
     <title><%= post.title %> | Codeshala Blog</title>
     <% include ../../partials/header %>
     <% include ../../partials/metadata %>
-    <!-- HTTPS required. HTTP will give a 403 forbidden response -->
-    <script src="https://sdk.accountkit.com/en_US/sdk.js"></script>
-
-    <script type="text/javascript">
-        // initialize Account Kit with CSRF protection
-        AccountKit_OnInteractive = function () {
-            AccountKit.init(
-                {
-                    appId: "348992692256013",
-                    state: "poiuycgh",
-                    version: "v1.1",
-                    fbAppEventsEnabled: true,
-                    redirect: "http://codeshala.org/success",
-                    debug: "true"
-                }
-            );
-        };
-
-
-        // phone form submission handler
-        function smsLogin() {
-            var countryCode = document.getElementById("country_code").value;
-            var phoneNumber = document.getElementById("phone_number").value;
-            AccountKit.login(
-                'PHONE',
-                {countryCode: countryCode, phoneNumber: phoneNumber}, // will use default values if not specified
-                loginCallback
-            );
-        }
-
-
-        // email form submission handler
-        function emailLogin() {
-            var emailAddress = document.getElementById("email").value;
-            AccountKit.login(
-                'EMAIL',
-                {emailAddress: emailAddress},
-                loginCallback
-            );
-        }
-
-        // login callback
-        function loginCallback(response) {
-            if (response.status === "PARTIALLY_AUTHENTICATED") {
-                //var code = response.code;
-                //var csrf = response.state;
-                //console.log(code);
-                //console.log(csrf);
-            }
-            else if (response.status === "NOT_AUTHENTICATED") {
-                console.log("NA");
-            }
-            else if (response.status === "BAD_PARAMS") {
-                // handle bad parameters
-                console.log("BP");
-            }
-        }
-    </script>
 </head>
 <body>
 <% include ../../partials/nav %>
@@ -90,4 +32,14 @@
 
 <% include ../../partials/footer-scripts %>
 <script src="/client.js"></script>
+<script>
+    $(document).ready(function(){
+        var list = document.getElementsByTagName("img");
+        console.log(list);
+        for(element in list){
+            console.log(element);
+            list[element].classList.add("img-fluid");
+        }
+    })
+</script>
 </html>
